content/riak/kv/2.0.0/configuring.md
---
title: "Configuring Riak KV"
description: ""
project: "riak_kv"
project_version: "2.0.0"
menu:
  riak_kv-2.0.0:
    name: "Configuring"
    identifier: "configuring"
    weight: 200
    pre: icon-cog
toc: true
canonical_link: "https://docs.basho.com/riak/kv/latest/configuring"
---

[config basic]: ../configuring/basic
[config backend]: ../configuring/backend
[config manage]: ../configuring/managing
[config reference]: ../configuring/reference
[config strong consistency]: ../configuring/strong-consistency
[config load balance]: ../configuring/load-balancing-proxy
[config mapreduce]: ../configuring/map-reduce
[config search]: ../configuring/search
[config v3 mdc]: ../configuring/v3-multi-datacenter
[config v2 mdc]: ../configuring/v2-multi-datacenter

## In This Section

#### [Basic Configuration][config basic]

A guide covering commonly adjusted parameters when setting up a new cluster.

[Learn More >>][config basic]

#### [Backend Configuration][config backend]

Information on backend-specific configuration parameters.

[Learn More >>][config backend]

#### [Managing Configuration][config manage]

A small guide to retrieving, checking, and debugging your cluster configuration.

[Learn More >>][config manage]

#### [Configuration Reference][config reference]

A detailed list of all possible configuration parameters.

[Learn More >>][config reference]

#### [Implementing Strong Consistency][config strong consistency]

An article providing information on configuring and monitoring a Riak KV
cluster's optional strong consistency subsystem.

[Learn More >>][config strong consistency]

#### [Load Balancing & Proxy][config load balance]

A brief guide on commonly used load-balancing and proxy solutions.

[Learn More >>][config load balance]

#### [MapReduce Settings][config mapreduce]

Tutorial on configuring and tuning MapReduce for a cluster.

[Learn More >>][config mapreduce]

#### [Search Settings][config search]

Information on configuring and using Riak KV Search from an operational perspective.

[Learn More >>][config search]

#### [V3 Multi-Datacenter][config v3 mdc]

A guide on configuring Riak Enterprise's V3 Multi-Datacenter Replication

[Learn More >>][config v3 mdc]

#### [V2 Multi-Datacenter][config v2 mdc]

A guide on configuring Riak Enterprise's V2 Multi-Datacenter Replication

[Learn More >>][config v2 mdc]

